@@ -38,7 +38,6 @@ LOW
 - lots of stuff copied from beers-law-lab, much of it tweaked slightly
 - English strings have been capitalized, translations have not
 - 'H3O+/OH- ratio' label is a few pixels low on check box
-- show 'Basics' screen only in dev mode
 - TODO items in code
 
 MIGRATE TO COMMON
